Agentforce/force-app/main/default/objects/CEV__c/CEV__c.object-meta.xml
<CustomObject>
    <description>AD-211 - Custom object to track CEVs (Colleague Engagement Visits)</description>
    <label>CEV</label>
    <nameField>
        <displayFormat>CEV-{000000}</displayFormat>
        <label>CEV Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEVs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>