Agentforce/force-app/main/default/objects/CEV__c/fields/CEVCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CEVCaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CEVCaseSafeID</label>
    <type>Text</type>
</CustomField>