Agentforce/force-app/main/default/objects/CEV__c/fields/Colleague_Comments__c.field-meta.xml
<CustomField>
    <fullName>Colleague_Comments__c</fullName>
    <description>AD-211 - Stores the comments that the Colleague provided during the CEV visit</description>
    <label>Colleague Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>