Agentforce/force-app/main/default/objects/CEV__c/fields/Colleague_Recommendation_Score__c.field-meta.xml
<CustomField>
    <fullName>Colleague_Recommendation_Score__c</fullName>
    <description>AD-211 - Contains the score provided during the Colleague Engagement Visit</description>
    <label>Colleague Recommendation Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>