Agentforce/force-app/main/default/objects/CEV__c/fields/Legacy_OCS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy OCS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>