Agentforce/force-app/main/default/objects/CEV__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>AD-211 - Stores the NPS that this CEV was captured against</description>
    <label>NPS</label>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>CEVs</relationshipLabel>
    <relationshipName>CEVs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>