Agentforce/force-app/main/default/objects/CEV__c/validationRules/Validate_Colleague_Recommendation_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Colleague_Recommendation_Score</fullName>
    <active>true</active>
    <description>AD-211 - Ensure that the provided score is within a range of 0-10</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
OR(Colleague_Recommendation_Score__c &gt; 10,
Colleague_Recommendation_Score__c &lt; 0))</errorConditionFormula>
    <errorDisplayField>Colleague_Recommendation_Score__c</errorDisplayField>
    <errorMessage>Please enter a number between 0 and 10</errorMessage>
</ValidationRule>